--- a/app/src/main/res/menu/menu_profile.xml
+++ b/app/src/main/res/menu/menu_profile.xml
@@ -2,7 +2,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/menu_profile"
+        android:id="@+id/menu_logout"
+        android:orderInCategory="100"
+        android:title="Profile"
+        app:showAsAction="ifRoom"
+        android:icon="@drawable/ic_exit"/>
+    <item
+        android:id="@+id/menu_edit"
         android:orderInCategory="100"
         android:title="Profile"
         app:showAsAction="ifRoom"
